Add 6 pcdl-based post-simulation analysis tools
Wraps the pcdl package (PhysiCell data loader) to provide agent-friendly
analysis of simulation output without reading binary files directly.
This prevents the 1MB JSON buffer overflow that occurs when agents try
to Read .mat/.gif output files.

New tools: get_simulation_analysis_overview, get_timestep_summary,
get_population_timeseries, get_substrate_summary, get_cell_data,
generate_analysis_plot. All responses capped well under 1MB via
max_rows/max_timesteps parameters and markdown aggregation.

Also updates SKILL.md post-simulation workflow, get_help(), and
celltype-cli orientation prompt with analysis tool guidance.

--- a/PhysiCell/pyproject.toml
+++ b/PhysiCell/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "cairosvg>=2.7.0",
     "pillow>=10.0.0",
     "uq-physicell>=1.2.4",
+    "pcdl>=4.0.0",
 ]
 
 [project.optional-dependencies]
